tests/ui/fail/not-exists/message-id-value.stderr
error: message value: "state", not defined for locale "en"
 --> tests/ui/fail/not-exists/message-id-value.rs:6:30
  |
6 |     let _ = message!("home", "state");
  |                              ^^^^^^^

error: message value: "state", not defined for locale "en"
  --> tests/ui/fail/not-exists/message-id-value.rs:10:24
   |
10 | #[l10n_message("home", "state")]
   |                        ^^^^^^^

error: message value: "state", not defined for locale "en"
  --> tests/ui/fail/not-exists/message-id-value.rs:16:20
   |
16 |     #[l10n_message("state")]
   |                    ^^^^^^^
